--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,11 @@
 @import "tailwindcss";
 
+@theme {
+  --color-themeLightPurple: #f4f0fe;
+  --color-themeDefaultPurple: #8b3dff;
+  --color-themeDarkPurple: #7731d8;
+  --color-themeBackgroundPurple: #f4f0fd;
+}
 body {
   font-family: Arial, Helvetica, sans-serif;
   padding: 0;
